--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Delicious Bites</title>
+    <link rel="icon" type="image/x-icon" href="https://icons.iconarchive.com/icons/fi3ur/fruitsalad/256/strawberry-icon.png">
+
     <link rel="stylesheet" href="/index.css">
 </head>
 <body>
